chore: update docs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="PeerHub - Open source feedback for developers."
+      content="PeerHub - Open-sourcing developer reputation."
     />
     <meta name="theme-color" content="#191919" />
     <meta name="author" content="PeerHub" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="PeerHub - Open source feedback for developers" />
+    <meta property="og:title" content="PeerHub - Open-sourcing developer reputation" />
     <meta
       property="og:description"
-      content="Review your peers using the workflow you already know: approvals, comments, and change requests. Think Glassdoor meets GitHub."
+      content="Think Glassdoor meets GitHub. See how your peers really rate you, and review them in return. Stay anonymous when it matters. Use the trusted PR-style flow: approvals, comments, and change requests."
     />
     <meta property="og:image" content="https://peerhub.dev/preview.png" />
     <meta property="og:image:alt" content="PeerHub" />
